# src

./: .gitignore  README.md  commands from github
cpr_rviz_plugin/: CMakeLists.txt  CPRMover4.urdf.original.xacro  CPRMover4.urdf.xacro  package.xml
cpr_rviz_plugin/src/: teleop_panel.cpp
mover4_moveit_config/config/: CPRMover4.srdf  JOINT_LIMITS_from_cpr_mover.txt  joint_limits.original.yaml  joint_limits.yaml
mover4_moveit_config/launch/: demo.launch  joystick_control.launch  move_group.launch
my_mover4_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
my_mover4_moveit_config/config/: CPRMover4.srdf  kinematics.yaml  ompl_planning.yaml
my_mover4_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
robco19m/: CMakeLists.txt  package.xml
robco19m/launch/: config.rviz  cpr_mover4_rviz.launch  linorobot_rviz.launch  mybot_rviz.launch  robco19m_rviz.launch
robco19m/robot_description/: CPRMover4.urdf.xacro  robco19m.urdf.xacro  robco19m_base.urdf.xacro
robco19m/robot_description/urdf/: macros.xacro  materials.xacro  mybot.xacro  properties.1.xacro  properties.xacro
robco19m_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
robco19m_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  robco19m.srdf
robco19m_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
robko19m_cpr_rviz/: CMakeLists.txt  package.xml
robko19m_cpr_rviz/launch/: config.rviz  cpr_mover4_rviz.launch  linorobot_rviz.launch
robko19m_cpr_rviz/robot_description/: CPRMover4.urdf.1.xacro  CPRMover4.urdf.xacro
